--- a/css/header.css
+++ b/css/header.css
@@ -34,12 +34,22 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: olive;
+    right: 0;
+    z-index: -1;
 }
 .introduce {
     width: 600px;
     height: 400px;
+    z-index: 50;
     color: white;
+    position: absolute;
+    top: 370px;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 .introduce_title {
     font-size: 50px;
@@ -176,10 +186,45 @@ main {
     padding-bottom: 50px;
 }
 .project_box {
-    width: 1100px;
-    height: 750px;
+    width: 1000px;
+    height: 600px;
     border: 1px solid black;
     border-radius: 20px;
-    margin: 50px auto;
+    margin: 0 auto;
+    margin-bottom: 50px;
     background-color: white;
+    padding: 60px;
+}
+.project_title {
+    font-size: 35px;
+    font-weight: 600;
+}
+.project_year {
+    font-size: 16px;
+    margin: 30px 0;
+}
+.img_box {
+    width: 50%;
+}
+.ex_box {
+    width: 50%;
+    height: 500px;
+}
+.ex_box > .sen {
+    word-wrap: break-word;
+    width: 100%;
+    margin-bottom: 30px;
+    font-size: 17px;
+    line-height: 28px;
+}
+.option > div:first-child {
+    margin: 30px 0px;
+    font-size: 18px;
+    font-weight: 600;
+}
+.option > div  div {
+    margin: 30px 0px;
+}
+.option > div:last-child {
+    margin: 30px 0px;
 }
