--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
-
+html{
+	scroll-behavior: smooth;
+}
 ul {
     list-style: none;
     margin: 0;
@@ -201,30 +203,41 @@ main {
 }
 .project_year {
     font-size: 16px;
-    margin: 30px 0;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 .img_box {
-    width: 50%;
+    margin-right: 50px;
+}
+.img_box .img {
+    width: 450px;
+    margin: 0 auto;
+    
+    background-color: #495057;
+    height: 450px;
+}
+.count {
+    font-weight: 700;
+    margin: 0 auto;
+    margin-top: 15px;
 }
 .ex_box {
-    width: 50%;
     height: 500px;
 }
 .ex_box > .sen {
     word-wrap: break-word;
     width: 100%;
-    margin-bottom: 30px;
-    font-size: 17px;
+    font-size: 15px;
     line-height: 28px;
+    margin-bottom: 20px;
 }
 .option > div:first-child {
-    margin: 30px 0px;
-    font-size: 18px;
     font-weight: 600;
+    width: 110px;
 }
 .option > div  div {
-    margin: 30px 0px;
+    margin: 20px 0px;
 }
-.option > div:last-child {
+/* .option > div:last-child {
     margin: 30px 0px;
-}
+} */
